--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
     "sass": "^1.74.1"
   },
   "devDependencies": {
