--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-src/assets/img/
+
 src/assets/
-src/assets/sprite-door/
+public/sprite/
 node_modules
 dist
 dist-ssr
