--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "my-project",
     "private": true,
     "scripts": {
-        "start": "concurrently \"npm run start --prefix backend\" \"npm run dev --prefix frontend\""
+        "start": "concurrently \"npm run start --prefix backend --host\" \"npm run dev --prefix frontend --host\""
     },
     "devDependencies": {
         "concurrently": "^7.6.0"
