--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     },
     "devDependencies": {
         "concurrently": "^7.6.0"
+    },
+    "dependencies": {
+        "mime": "^4.0.3"
     }
 }
