--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@gsap/react": "^2.1.0",
         "axios": "^1.6.8",
+        "braces": "^3.0.3",
         "classnames": "^2.5.1",
         "git": "^0.1.5",
         "gsap": "^3.12.5",
